# slot-machine

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cpp/: bet.cpp  defaultIncludes.cpp  generateResults.cpp  inputReaders.cpp  screen.cpp  symb.cpp
headers/: bet.h  defaultIncludes.h  generateResults.h  inputReaders.h  screen.h  symb.h
